Add author to book
